--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-zeroblur.jpg
 zero.jpg
+zeroblur.jpg
+one.jpg
+oneblur.jpg
+two.jpg
+twoblur.jpg
+three.jpg
+threeblur.jpg
+fiveblur.jpg
+four.jpg
+fourblur.jpg
+five.jpg
